# heimdall

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml
heimdall/: __init__.py  __main__.py  api.py  config.py  db.py  kubernetes_client.py  models.py  service.py  users.py
tests/: test_api.py  test_users.py
webui/: biome.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.js  vite.config.ts
webui/public/: auth-callback.html
webui/src/: App.svelte  app.css  main.ts
webui/src/lib/: ExternalEndpoint.svelte  FlinkJobs.svelte  JobType.svelte  Modal.svelte  auth.js  auth.ts  authApi.js  authApi.ts
webui/src/lib/stores/: appConfig.js  appConfig.ts  flinkJobs.js  flinkJobs.ts  settings.js  settings.ts  user.js  user.ts
