[project]
name = "heimdall"
version = "0.1.0"
description = "Python reimplementation of Heimdall (Flink job discovery via K8s Operator)"
authors = [{ name = "dungnt", email = "dungnt@topcv.vn" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi[standard]>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "kubernetes-asyncio>=30.1.0",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.1.1",
  "authlib>=1.6.1",
  "starlette>=0.2.0",
  "python-multipart>=0.0.20",
  "itsdangerous>=2.2.0",
  "fastapi-users[sqlalchemy,oauth]",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.19.0",
  "httpx-oauth>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/sap1ens/heimdall"

[project.scripts]
heimdall = "heimdall.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["heimdall*"]
exclude = ["tests*", "_upstream_heimdall_java*", "webui*", "node_modules*"]

[tool.uv]
# uv will read dependencies from [project] above
package = true
